Aggiunta al carrello

--- a/static/CSS/index.css
+++ b/static/CSS/index.css
@@ -8,3 +8,20 @@
     border: 5px solid lightgray;
     opacity: 1;
    }
+   #topTable {
+    background-color: #2B2D2D;
+    padding: 2%;
+    text-align: center;
+    color: white;
+    border-top: 2px solid black;
+}
+
+#btnEliminaCarrello {
+    background-color: black;
+}
+
+#btnEliminaCarrello:hover{
+    background-color: #e01931;
+}
+
+Invia un messaggio in @Fetty_Fill
